cursive-bootstrap/tests/ui/E-SEM/E-SEM-2705.cursive
// RUN: compile-fail
// DIAG: E-SEM-2705
// SPEC: 5.2.6
// DESC: Match expression is not exhaustive for union type

public procedure main(move ctx: Context) -> i32 {
    let u: i32 | bool | char = 42
    let result: i32 = match u {
        v: i32 => { v }
        b: bool => { 0 }
        // Missing char case  //~ ERROR E-SEM-2705: non-exhaustive
    }
    return result
}
